# src/controllers/UserController.ts
@@ -66,19 +66,26 @@ export class UserController {
    *           schema:
    *             type: object
    *             properties:
-   *               username:
-   *                 type: string
-   *                 description: Username of the user
    *               email:
    *                 type: string
    *                 description: Email address of the user
    *               password:
    *                 type: string
-   *                 description: Password for the user
+   *                 description: Password of the user
+   *               accountStatus:
+   *                 type: boolean
+   *                 description: Status of the user's account
+   *                 default: true
+   *               role:
+   *                 type: string
+   *                 enum: [admin, institution, researcher, explorer]
+   *                 description: Role of the user
+   *                 default: explorer
    *             example:
-   *               username: john_doe
    *               email: john.doe@example.com
-   *               password: securePassword123
+   *               password: mypassword
+   *               accountStatus: true
+   *               role: explorer
    *     responses:
    *       '200':
    *         description: Created user object
@@ -108,15 +115,19 @@ export class UserController {
    *           schema:
    *             type: object
    *             properties:
-   *               username:
-   *                 type: string
-   *                 description: Updated username of the user
    *               email:
    *                 type: string
    *                 description: Updated email address of the user
-   *             example:
-   *               username: john_doe_updated
-   *               email: john.doe.updated@example.com
+   *               password:
+   *                 type: string
+   *                 description: Updated password of the user
+   *               accountStatus:
+   *                 type: boolean
+   *                 description: Updated status of the user's account
+   *               role:
+   *                 type: string
+   *                 enum: [admin, institution, researcher, explorer]
+   *                 description: Updated role of the user
    *     responses:
    *       '200':
    *         description: Updated user object
